--- a/Master.html
+++ b/Master.html
@@ -5,7 +5,7 @@ layout: about
 
 # Master
 
-Welcome to the Master page. Here are the subpages:
+Let me introduce you to my Masters degree at the University of Essex. The following subjects were especially important for my studies:
 
 - [Introduction into EITM](introduction-into-eitm.html)
 - [Security and Risk Management](security-and-risk-management.html)
