--- a/Master.html
+++ b/Master.html
@@ -1,13 +1,15 @@
 ---
 title: Master
-layout: about
+layout: default
 ---
 
 # Master
 
-Let me introduce you to my Masters degree at the University of Essex. The following subjects were especially important for my studies:
-
-- [Introduction into EITM](introduction-into-eitm.html)
-- [Security and Risk Management](security-and-risk-management.html)
-
----
+<div class="tiles">
+  <a href="introduction-into-eitm.html" class="tile" style="background-image: url('/assets/images/eitm.jpg');">
+    <span class="tile-title">Introduction into EITM</span>
+  </a>
+  <a href="security-and-risk-management.html" class="tile" style="background-image: url('/assets/images/security.jpg');">
+    <span class="tile-title">Security and Risk Management</span>
+  </a>
+</div>
