--- a/Master.html
+++ b/Master.html
@@ -3,7 +3,7 @@ title: Master
 layout: default
 ---
 
-# Master
+#Master#
 
 <div class="tiles">
   <a href="introduction-into-eitm.html" class="tile" style="background-image: url('/assets/images/eitm.jpg');">
