--- a/Master.html
+++ b/Master.html
@@ -4,3 +4,7 @@ layout: about
 ---
 
 Master
+Further Bresciani et al. emphasize the importance of organizational culture, leadership, and employee skills. They argue that successful digital transformation depends equally on human and organizational factors, contrasting with the more technology-centric view of Kovaitė and Stankevičienė.
+
+In conclusion, while Kovaitė and Stankevičienė (2019) highlight technological risks, Bresciani et al. (2018) emphasize a holistic approach that includes human factors for robust risk management in digitalized business models.
+
